--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 
     <main>
         <div id="grid-container">
-
-        </div>
+            <!-- <div class="child" data-cell="0"></div><div class="child" data-cell="1"></div><div class="child" data-cell="2"></div><div class="child" data-cell="3"></div><div class="child" data-cell="4"></div><div class="child" data-cell="5"></div><div class="child" data-cell="6"></div><div class="child" data-cell="7"></div><div class="child" data-cell="8"></div></div> -->
     </main>
 
     <footer></footer>
