Add resetBoard and updateWinner private methods

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 </head>
 <body>
 
-    <header></header>
+    <header>
+        <h1>TIC TAC TOE</h1>
+    </header>
+
+    <div class="turn-and-winner">
+        <h2 id="turn-and-winner-text">Hi</h2>
+    </div>
 
     <main>
         <div id="grid-container">
@@ -17,7 +23,16 @@
         </div>
     </main>
 
-    <footer></footer>
+    <div class="restart-btn">
+        <button id="restart">Restart</button>
+    </div>
+
+    <footer>
+        <div class="f-container">
+            <p>Created by<a href="https://github.com/yuniel-reyes"  class="signature">Yuniel Reyes</a> for 
+                <a href="https://www.theodinproject.com" class="odin-link">The Odin Project</a></p>
+        </div>
+    </footer>
 
     <script src="myscript.js" defer></script>
 </body>
