Add footer and footer style

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 
     <footer>
         <div class="f-container">
-            <p>Created by<a href="https://github.com/yuniel-reyes"  class="signature">Yuniel Reyes</a> for 
+            <p>Created by <a href="https://github.com/yuniel-reyes"  class="signature">Yuniel Reyes</a> for 
                 <a href="https://www.theodinproject.com" class="odin-link">The Odin Project</a></p>
         </div>
     </footer>
 
-    <script src="myscript.js" defer></script>
+    <script src="myscript.js"></script>
 </body>
 </html>
